Phase 2: Playwright browser automation for reactions + comments

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Copy to .env and fill in your values.
 # NEVER commit .env to git.
 
-# dev.to API key (required)
+# dev.to API key (required for reads)
 # Get from: https://dev.to/settings/extensions
 GROWTH_DEVTO_API_KEY=your_devto_api_key_here
 
@@ -17,3 +17,11 @@ GROWTH_REACTION_DELAY=2.0
 GROWTH_COMMENT_DELAY=3.0
 GROWTH_MAX_COMMENTS_PER_CYCLE=5
 GROWTH_MIN_REACTIONS_TO_COMMENT=3
+
+# Browser automation (Playwright for write operations)
+# dev.to login credentials — required for reactions & comments
+GROWTH_DEVTO_EMAIL=your-email@example.com
+GROWTH_DEVTO_PASSWORD=your-password-here
+GROWTH_BROWSER_HEADLESS=true
+GROWTH_BROWSER_TIMEOUT=30
+GROWTH_USE_BROWSER=true
